--- a/front-end/package.json
+++ b/front-end/package.json
@@ -38,6 +38,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "whatwg-fetch": "^3.6.19"
   }
 }
