--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/use-sync-external-store": "^0.0.5",
     "axios": "^1.5.1",
+    "firebase": "^10.6.0",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
