--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.6",
     "@types/mapbox-gl": "^2.7.17",
