--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest --watchAll",
-    "testOnce": "jest"
+    "testOnce": "jest",
+    "test:debug": "node --inspect-brk -r ts-node/register ./node_modules/jest/bin/jest --runInBand"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
