--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/use-sync-external-store": "^0.0.5",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
