--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.2",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.3",
     "@testing-library/react": "^14.1.2",
@@ -38,6 +39,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
