--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
