--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "testOnce": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/use-sync-external-store": "^0.0.5",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
@@ -48,7 +50,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "5.0.5",
     "whatwg-fetch": "^3.6.20"
   }
 }
